fix(client): correct css styles for better alignment

--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -41,6 +41,9 @@
 }
 
 @media screen and (max-width: 624px) {
+  .navbar {
+    align-items: flex-start;
+  }
   .navbar__list {
     flex-direction: column;
     transform: translateX(-100vw);
